fixtures/frontend/milestone-2/invalid/recurrence-continuation/main.aivi
fun step value =>
    value

val broken =
    0
     @|> step
     <|@ step
     |> step
